moved everything into the nodejs project

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,18 +5,47 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 
 	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+
+	<link href="css/hive.css" rel="stylesheet">
 
 	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-</head>
+	<script src="js/bootstrap.min.js"></script>
 
+	<link href='http://fonts.googleapis.com/css?family=Lato|PT+Sans|Open+Sans' rel='stylesheet' type='text/css'>
+</head>
 <body>
 	<div class="container">
-	hello world
+		<nav class="navbar">
+			<div id="logo">
+				<h2 id="appname">Hive</h2>
+			</div>
+			<div id="settings-cog">
+				<button type="button" class="btn btn-default" aria-label="Left Align">
+					<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+				</button>
+			</div>
+			<div class="navbar-right">
+				<div>
+				</div>
+				<div>
+				</div>
+			</div>
+		</nav>
 	</div>
+	<div class="header">
+		<h2 class="header-text">This Week</h2>
+	</div>
+
+	<div class="header">
+		<h2 class="header-text">Upcoming Week</h2>
+	</div>
+	
+	<div class="container"></div>
+
+
 </body>
 </html>
