now it's a mobile app

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,10 @@
 <head>
 	<title>Hive</title>	
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -35,17 +38,14 @@
 				</div>
 			</div>
 		</nav>
-	</div>
-	<div class="header">
-		<h2 class="header-text">This Week</h2>
-	</div>
 
-	<div class="header">
-		<h2 class="header-text">Upcoming Week</h2>
+		<div class="header">
+			<h2 class="header-text">This Week</h2>
+		</div>
+
+		<div class="header">
+			<h2 class="header-text">Upcoming Week</h2>
+		</div>
 	</div>
-	
-	<div class="container"></div>
-
-
 </body>
 </html>
