--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,22 +7,28 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bootstrap/dist/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="css/hive.css">
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
-
-	<link href="css/hive.css" rel="stylesheet">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="js/bootstrap.min.js"></script>
+	<script src="jquery/dist/jquery.min.js"></script>
+	<script src="bootstrap/dist/js/bootstrap.min.js"></script>
 
 	<link href='http://fonts.googleapis.com/css?family=Lato|PT+Sans|Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	<div class="navbar navbar-default navbar-fixed-top">
+
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">Brand</a>
+			<a href="#" class="navbar-icon"><span class="glyphicon glyphicon-comment"></span></a>
+			<a href="#" class="navbar-icon"><span class="glyphicon glyphicon-edit"></span></a>
+		</div>
+	</div>
+
+
 	<div class="container">
-		<nav class="navbar">
+<!-- 		<nav class="navbar">
 			<div id="logo">
 				<h2 id="appname">Hive</h2>
 			</div>
@@ -38,14 +44,14 @@
 				</div>
 			</div>
 		</nav>
-
-		<div class="header">
-			<h2 class="header-text">This Week</h2>
-		</div>
-
-		<div class="header">
-			<h2 class="header-text">Upcoming Week</h2>
-		</div>
+	-->
+	<div class="header">
+		<h2 class="header-text">This Week</h2>
 	</div>
+
+	<div class="header">
+		<h2 class="header-text">Upcoming Week</h2>
+	</div>
+</div>
 </body>
 </html>
