--- a/public/css/hive.css
+++ b/public/css/hive.css
@@ -1,17 +1,20 @@
 body {
+	padding-top: 6px;
 	background-image:url(../images/school.png); background-repeat:repeat
 }
 
 .header {
 	background-color: #FFCC11;
-	height:55px;
+	height:40px;
 }
 .header-text {
 	font-family: 'Lato';
-	font-size: 35px;
+	font-size: 25px;
 	padding-bottom: 8px;
-	padding-top: 8px;
+	padding-top: 3px;
 	color:#444444;
+	padding-top: 6px;
+	padding-left: 40px;
 }
 
 #logo {
