--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,16 +15,16 @@
 	<script src="jquery/dist/jquery.min.js"></script>
 	<script src="bootstrap/dist/js/bootstrap.min.js"></script>
 
-	<link href='http://fonts.googleapis.com/css?family=Lato|PT+Sans|Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato|PT+Sans|Open+Sans|Poiret+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class="navbar navbar-default navbar-fixed-top">
 
 		<div class="navbar-header">
-			<a class="navbar-brand" id="logo" href="#">Hive</a>
-			<a href="#" class="navbar-icon"><span class="glyphicon glyphicon-comment"></span></a>
-			<a href="#" class="navbar-icon"><span class="glyphicon glyphicon-edit"></span></a>
-
+			<a class="navbar-brand" id="logo" href="#" style="padding-left: 40px; font-family: Poiret One;">Hive</a>
+			<div href="#" class="navbar-icon pull-right" style="padding-top: 12px; padding-right: 30px"><span class="glyphicon glyphicon-plus"></span></div>
+			<div href="#" class="navbar-icon pull-right" style="padding-top: 13.5px; padding-right: 13px;"><span class="glyphicon glyphicon-envelope"></span></div>
+			<div href="#" class="navbar-icon pull-right" style="padding-right: 12px; padding-top: 13.6px;"><span class="glyphicon glyphicon-cog"></span></div>
 		</div>
 	</div>
 
