--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,9 +23,9 @@
         <div class="login">
             <div class="login-information">
                 <ul>
-               <li><input type="text" placeholder="username" id="username"></li> 
+               <li><input type="text" placeholder="username"></li> 
                 <br>
-                <li><input type ="text" placeholder="password" id="password"></li>
+                <li><input type ="password" placeholder="password"></li>
                     </ul>
                 </div>
             <div class="login-button">
