--- a/public/templates/tabs.html
+++ b/public/templates/tabs.html
@@ -7,20 +7,20 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Status" icon-off="ion-ios7-pulse" icon-on="ion-ios7-pulse-strong" href="#/tab/dash">
+  <ion-tab title="Tasks" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chats">
+  <ion-tab title="Shared" badge="7" badge-style="badge-assertive" icon-off="ion-ios7-world-outline" icon-on="ion-ios7-world" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
   <!-- Friends Tab -->
-  <ion-tab title="Friends" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/friends">
+<!--   <ion-tab title="Friends" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/friends">
     <ion-nav-view name="tab-friends"></ion-nav-view>
-  </ion-tab>
+  </ion-tab> -->
 
 
   <!-- Account Tab -->
