added add task tab

--- a/views/index_ionic.handlebars
+++ b/views/index_ionic.handlebars
@@ -28,6 +28,12 @@
   <ion-nav-bar class="bar-stable">
     <ion-nav-back-button>
     </ion-nav-back-button>
+
+    <div class="buttons">
+      <h1 class="title">Hive</h1>
+<!--             <button class="button button-icon icon ion-ios-plus-outline" href="#/tab/dash">
+      </button> -->
+      </div>
   </ion-nav-bar>
 
   <ion-nav-view></ion-nav-view>
