--- a/public/templates/tabs.html
+++ b/public/templates/tabs.html
@@ -11,6 +11,11 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
+    <!-- Add Task Tab -->
+  <ion-tab title="Add Task" icon-off="ion-ios-plus-outline" icon-on="ion-ios-plus" href="#/tab/add">
+    <ion-nav-view name="tab-add"></ion-nav-view>
+  </ion-tab>
+
 
   <!-- Chats Tab -->
   <ion-tab title="Shared" badge="7" badge-style="badge-assertive" icon-off="ion-ios7-world-outline" icon-on="ion-ios7-world" href="#/tab/chats">
