made login page redirect to ionic

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,7 +29,7 @@
                     </ul>
                 </div>
             <div class="login-button">
-                <a href="/" id="loginbutton">Log In</a>
+                <a href="/ionic" id="loginbutton">Log In</a>
                 <a href="#" id="signupbutton">Sign Up</a>
             
             </div>
