made login change to app successfully on iOS

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,6 +14,7 @@
 
 	<script src="jquery/dist/jquery.min.js"></script>
 	<script src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/links.js"></script>
 
 	<link href='http://fonts.googleapis.com/css?family=Lato|PT+Sans|Open+Sans|Poiret+One' rel='stylesheet' type='text/css'>
 </head>
