Made a fake suggested task page

--- a/views/index_ionic.handlebars
+++ b/views/index_ionic.handlebars
@@ -10,6 +10,9 @@
 
   <link href="ionic/css/ionic.css" rel="stylesheet">
   <link href="ionicons/css/ionicons.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/hivesuggested.css">
+    
+    	<link href='http://fonts.googleapis.com/css?family=Lato|PT+Sans|Open+Sans|Poiret+One' rel='stylesheet' type='text/css'>
 
 
   <!-- ionic/angularjs js -->
