--- a/public/templates/tab-chats.html
+++ b/public/templates/tab-chats.html
@@ -1,16 +1,55 @@
 <ion-view view-title="Chats">
-  <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.lastText}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
-      </ion-item>
-    </ion-list>
+  <ion-content class="padding">
+    <ul class="list">
+      <li class="suggested">
+        <div class="title">Midterm Study Session
+          </div>
+          <div class="course">COGS102B</div>
+           <div class="date">2/10/15</div>
+          <div class="endorsed"><span class="ion-checkmark-round"> by 22 students</span></div>
+          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+  Accept
+</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+  Decline
+</button></div>
+        </li>
+<li class="suggested">
+        <div class="title">Reading Guide 3
+          </div>
+          <div class="course">COGS102B</div>
+           <div class="date">2/17/15</div>
+          <div class="endorsed"><span class="ion-checkmark-round"> by TA</span></div>
+          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+  Accept
+</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+  Decline
+</button></div>
+        </li>
+<li class="suggested">
+        <div class="title">Reading Quiz
+          </div>
+          <div class="course">CSE 11</div>
+           <div class="date">2/21/15</div>
+          <div class="endorsed"><span class="ion-checkmark-round"> by Professor Jundt</span></div>
+          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+  Accept
+</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+  Decline
+</button></div>
+        </li>
+<li class="suggested">
+        <div class="title">Extra Credit Project
+          </div>
+          <div class="course">POLI 28</div>
+           <div class="date">2/28/15</div>
+          <div class="endorsed"><span class="ion-checkmark-round"> by 17 students</span></div>
+          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+  Accept
+</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+  Decline
+</button></div>
+        </li>
+      </ul>
+      
   </ion-content>
 </ion-view>
