added GA; made ionic the default

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -30,7 +30,7 @@
                     </ul>
                 </div>
             <div class="login-button">
-                <a href="/ionic" id="loginbutton">Log In</a>
+                <a href="/" id="loginbutton">Log In</a>
                 <a href="#" id="signupbutton">Sign Up</a>
             
             </div>
