added list dividers

--- a/public/templates/tab-dash.html
+++ b/public/templates/tab-dash.html
@@ -1,12 +1,37 @@
 <ion-view view-title="Dashboard">
   <ion-content class="padding">
 
+  <div class="list">
+
+    <div class="item item-divider">
+      This Week
+    </div>
+
   <ion-checkbox ng-model="a">Checkbox Label</ion-checkbox>
   <ion-checkbox ng-model="b">Checkbox Label</ion-checkbox>
 
   <ion-checkbox ng-model="c">Checkbox Label</ion-checkbox>
 
-  <ion-checkbox ng-model="d">Checkbox Label</ion-checkbox>
+    <div class="item item-divider">
+      Upcoming
+    </div>
+
+
+  <ion-checkbox ng-model="aa">Checkbox Label</ion-checkbox>
+  <ion-checkbox ng-model="bb">Checkbox Label</ion-checkbox>
+
+  <ion-checkbox ng-model="cc">Checkbox Label</ion-checkbox>
+  <ion-checkbox ng-model="dd">Checkbox Label</ion-checkbox>
+  <ion-checkbox ng-model="ee">Checkbox Label</ion-checkbox>
+
+  <ion-checkbox ng-model="ff">Checkbox Label</ion-checkbox>
+  <ion-checkbox ng-model="gg">Checkbox Label</ion-checkbox>
+  <ion-checkbox ng-model="hh">Checkbox Label</ion-checkbox>
+
+  <ion-checkbox ng-model="ii">Checkbox Label</ion-checkbox>
+
+
+  </div>
 
   </ion-content>
 </ion-view>
