Modified form in tab-add

--- a/public/templates/tab-add.html
+++ b/public/templates/tab-add.html
@@ -38,6 +38,12 @@
           <label class="item item-input">
             <textarea placeholder="Description"></textarea>
           </label>
+
+          <div class="submitButton">
+          <button class="button button-block button-calm">
+            Submit
+          </button>
+          <div>
       </div>
     </p>
   </ion-content>
