Finished but it's so bad:(

--- a/public/templates/tab-dash.html
+++ b/public/templates/tab-dash.html
@@ -7,28 +7,33 @@
       This Week
     </div>
 
-  <ion-checkbox ng-model="a">Checkbox Label</ion-checkbox>
-  <ion-checkbox ng-model="b">Checkbox Label</ion-checkbox>
+  <ion-list>
+      <div class="task">
+      <ion-checkbox ng-model="a"><div class="tasks"><div class="task-title">Assignment #5</div><div class= "date-title">Thursday</div><div class= "course-title">COGS120</div></div>
+      </ion-checkbox>
+      </div>
+    </ion-list>
+  <ion-checkbox ng-model="b"><div class="tasks"><div class="task-title">Reading Guide #1</div><div class= "date-title">Thursday</div><div class= "course-title">COGS102B</div></div></ion-checkbox>
 
-  <ion-checkbox ng-model="c">Checkbox Label</ion-checkbox>
+  <ion-checkbox ng-model="c"><div class="tasks"><div class="task-title">Midterm I</div><div class= "date-title">Friday</div><div class= "course-title">POLI 28</div></div></ion-checkbox>
 
     <div class="item item-divider">
       Upcoming
     </div>
 
 
-  <ion-checkbox ng-model="aa">Checkbox Label</ion-checkbox>
-  <ion-checkbox ng-model="bb">Checkbox Label</ion-checkbox>
+  <ion-checkbox ng-model="aa"><div class="tasks"><div class="task-title">Homework 2.1-2.14, 3.1</div><div class= "date-title">2/04/15</div><div class= "course-title">MATH20F</div></div></ion-checkbox>
+  <ion-checkbox ng-model="bb"><div class="tasks"><div class="task-title">Lab #6</div><div class= "date-title">2/13/15</div><div class= "course-title">COGS120</div></div></ion-checkbox>
 
-  <ion-checkbox ng-model="cc">Checkbox Label</ion-checkbox>
-  <ion-checkbox ng-model="dd">Checkbox Label</ion-checkbox>
+  <ion-checkbox ng-model="cc"><div class="tasks"><div class="task-title">Study Guide Due</div><div class= "date-title">2/28/15</div><div class= "course-title">COGS102B</div></div></ion-checkbox>
+ <!-- <ion-checkbox ng-model="dd">Checkbox Label</ion-checkbox>
   <ion-checkbox ng-model="ee">Checkbox Label</ion-checkbox>
 
   <ion-checkbox ng-model="ff">Checkbox Label</ion-checkbox>
   <ion-checkbox ng-model="gg">Checkbox Label</ion-checkbox>
   <ion-checkbox ng-model="hh">Checkbox Label</ion-checkbox>
 
-  <ion-checkbox ng-model="ii">Checkbox Label</ion-checkbox>
+  <ion-checkbox ng-model="ii">Checkbox Label</ion-checkbox> -->
 
 
   </div>
