--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -28,3 +28,36 @@ ul {
 .suggested {
     padding-bottom: 15px;
 }
+.task {
+
+}
+.task-title {
+    font-size:20px;
+    display: inline;
+    padding-right: 10px;
+    padding-left: 5px;
+
+}
+.task {
+
+}
+.tasks {
+    padding-top:5px;
+    margin-top: -3px;
+}
+.course-title {
+    font-size:15px;
+    padding-left: 5px;
+    
+
+}
+
+.date-title {
+    float: right;
+    display: inline;
+    font-size: 22px;
+    margin-top: 5px;
+    
+    
+}
+
