--- a/public/templates/tab-chats.html
+++ b/public/templates/tab-chats.html
@@ -7,9 +7,9 @@
           <div class="course">COGS102B</div>
            <div class="date">2/10/15</div>
           <div class="endorsed"><span class="ion-checkmark-round"> by 22 students</span></div>
-          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px">
   Accept
-</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px">
   Decline
 </button></div>
         </li>
@@ -19,9 +19,9 @@
           <div class="course">COGS102B</div>
            <div class="date">2/17/15</div>
           <div class="endorsed"><span class="ion-checkmark-round"> by TA</span></div>
-          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px; ">
   Accept
-</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px; min-height:2px; height: 30px; border-style:none; margin-top:-9px">
   Decline
 </button></div>
         </li>
@@ -31,9 +31,9 @@
           <div class="course">CSE 11</div>
            <div class="date">2/21/15</div>
           <div class="endorsed"><span class="ion-checkmark-round"> by Professor Jundt</span></div>
-          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px">
   Accept
-</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px">
   Decline
 </button></div>
         </li>
@@ -43,9 +43,9 @@
           <div class="course">POLI 28</div>
            <div class="date">2/28/15</div>
           <div class="endorsed"><span class="ion-checkmark-round"> by 17 students</span></div>
-          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px">
   Accept
-</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;">
+</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px; min-height:2px; height: 30px; border-style:none; margin-top:-9px">
   Decline
 </button></div>
         </li>
