--- a/public/templates/tab-add.html
+++ b/public/templates/tab-add.html
@@ -6,52 +6,52 @@
 -->
 <ion-view view-title="Add Task">
   <ion-content class="padding">
-  <link href="../css/tab-add.css" rel="stylesheet">
-    <p>
-      <div class="list">
-        <label class="item item-input">
-          <input type="text" placeholder="Title">
-        </label>
+    <div class="list list-inset">
 
-  <label class="item item-input item-select">
-    <div class="input-label">
-      Class
-    </div>
-    <select>
-      <option>CSE124</option>
-      <option selected>COGS120</option>
-      <option>CSE132A</option>
-    </select>
-  </label>
+      <label class="item item-input">
+        <input type="text" placeholder="Title">
+      </label>
 
-        <label class="item item-input">
-          <input type="date" placeholder="Due Date">
-        </label>
+      <label class="item item-input item-select">
+        <div class="input-label">
+          Class
+          </div>
+        <select>
+          <option>CSE124</option>
+          <option selected>COGS120</option>
+          <option>CSE132A</option>
+        </select>
+      </label>
 
-        <label class="item item-input">
-          <input type="text" placeholder="Time">
-        </label>
+      <label class="item item-input">
+        <input type="date" placeholder="Due Date">
+      </label>
 
-        <ion-item class="item-toggle">
-         Share with Class
-          <label class="toggle">
-            <input type="checkbox" ng-model="settings.enableShare">
+      <label class="item item-input">
+        <input type="text" placeholder="Time">
+      </label>
+
+      <ion-item class="item-toggle">
+        Share with Class
+        <label class="toggle">
+          <input type="checkbox" ng-model="settings.enableShare">
             <div class="track">
               <div class="handle"></div>
             </div>
+        </label>
+      </ion-item>
 
-          </label>
-        </ion-item>
-          <label class="item item-input">
-            <textarea rows=5 placeholder="Description"></textarea>
-          </label>
+      <label class="item item-input">
+        <textarea rows=5 placeholder="Description"></textarea>
+      </label>
 
-          <div class="submitButton">
-          <button class="button button-block button-calm">
-            Add Task
-          </button>
-          <div>
-      </div>
-    </p>
+      <div class="submitButton">
+        <button class="button button-block button-calm">
+          Add Task
+        </button>
+      <div>
+    </div>
+
+
   </ion-content>
 </ion-view>
