--- a/public/templates/tab-chats.html
+++ b/public/templates/tab-chats.html
@@ -1,55 +1,95 @@
 <ion-view view-title="Chats">
-  <ion-content class="padding">
-    <ul class="list">
-      <li class="suggested">
-        <div class="title">Midterm Study Session
-          </div>
-          <div class="course">COGS102B</div>
-           <div class="date">2/10/15</div>
-          <div class="endorsed"><span class="ion-checkmark-round"> by 22 students</span></div>
-          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px">
-  Accept
-</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px">
-  Decline
-</button></div>
-        </li>
-<li class="suggested">
-        <div class="title">Reading Guide 3
-          </div>
-          <div class="course">COGS102B</div>
-           <div class="date">2/17/15</div>
-          <div class="endorsed"><span class="ion-checkmark-round"> by TA</span></div>
-          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px; ">
-  Accept
-</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px; min-height:2px; height: 30px; border-style:none; margin-top:-9px">
-  Decline
-</button></div>
-        </li>
-<li class="suggested">
-        <div class="title">Reading Quiz
-          </div>
-          <div class="course">CSE 11</div>
-           <div class="date">2/21/15</div>
-          <div class="endorsed"><span class="ion-checkmark-round"> by Professor Jundt</span></div>
-          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px">
-  Accept
-</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px">
-  Decline
-</button></div>
-        </li>
-<li class="suggested">
-        <div class="title">Extra Credit Project
-          </div>
-          <div class="course">POLI 28</div>
-           <div class="date">2/28/15</div>
-          <div class="endorsed"><span class="ion-checkmark-round"> by 17 students</span></div>
-          <button class="button button-outline button-balanced" style="font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px;  min-height:2px; height: 30px; border-style:none; margin-top:-9px">
-  Accept
-</button></div><button class="button button-outline button-assertive" style= "font-family: 'open sans'; width: 130px; font-size: 15px; margin-left: 50px; min-height:2px; height: 30px; border-style:none; margin-top:-9px">
-  Decline
-</button></div>
-        </li>
-      </ul>
-      
-  </ion-content>
+	<ion-content>
+		<ul class="list">
+ 			<li class="item" style="padding-bottom: 0px;">
+ 				<div class="suggested-content">
+		    	<div class="title">Midterm Study Session</div>
+	    		<div class="course">COGS102B</div>
+	    		<div class="date">2/10/15</div>
+	    		<div class="endorsed">
+	    			<span class="ion-checkmark-round"> by 22 students</span>
+	    		</div>
+	    		<div class= "action-buttons">
+		   		  <button class="button button-clear button-balanced" style="line-height: 30px;"> 
+		 			 		Accept
+						</button>
+						<button class="button button-clear button-assertive" style="line-height: 30px;">
+		 					Decline
+						</button>
+					</div>
+				</div>
+			</li>
+ 			<li class="item" style="padding-bottom: 0px;">
+ 				<div class="suggested-content">
+		    	<div class="title">Midterm Study Session</div>
+	    		<div class="course">COGS102B</div>
+	    		<div class="date">2/10/15</div>
+	    		<div class="endorsed">
+	    			<span class="ion-checkmark-round"> by 22 students</span>
+	    		</div>
+	    		<div class= "action-buttons">
+		   		  <button class="button button-clear button-balanced" style="line-height: 30px;"> 
+		 			 		Accept
+						</button>
+						<button class="button button-clear button-assertive" style="line-height: 30px;">
+		 					Decline
+						</button>
+					</div>
+				</div>
+			</li>
+			<li class="item" style=" padding-bottom: 0px;">
+ 				<div class="suggested-content">
+		    	<div class="title">Midterm Study Session</div>
+	    		<div class="course">COGS102B</div>
+	    		<div class="date">2/10/15</div>
+	    		<div class="endorsed">
+	    			<span class="ion-checkmark-round"> by 22 students</span>
+	    		</div>
+	    		<div class= "action-buttons">
+		   		  <button class="button button-clear button-balanced" style="line-height: 30px;"> 
+		 			 		Accept
+						</button>
+						<button class="button button-clear button-assertive" style="line-height: 30px;">
+		 					Decline
+						</button>
+					</div>
+				</div>
+			</li>
+		 	<li class="item" style="padding-bottom: 0px;">
+ 				<div class="suggested-content">
+		    	<div class="title">Midterm Study Session</div>
+	    		<div class="course">COGS102B</div>
+	    		<div class="date">2/10/15</div>
+	    		<div class="endorsed">
+	    			<span class="ion-checkmark-round"> by 22 students</span>
+	    		</div>
+	    		<div class= "action-buttons">
+		   		  <button class="button button-clear button-balanced" style="line-height: 30px;"> 
+		 			 		Accept
+						</button>
+						<button class="button button-clear button-assertive" style="line-height: 30px;">
+		 					Decline
+						</button>
+					</div>
+				</div>
+			</li>
+			 <li class="item" style="padding-bottom: 0px;">
+ 				<div class="suggested-content">
+		    	<div class="title">Midterm Study Session</div>
+	    		<div class="course">COGS102B</div>
+	    		<div class="date">2/10/15</div>
+	    		<div class="endorsed">
+	    			<span class="ion-checkmark-round"> by 22 students</span>
+	    		</div>
+	    		<div class= "action-buttons">
+		   		  <button class="button button-clear button-balanced" style="line-height: 30px;"> 
+		 			 		Accept
+						</button>
+						<button class="button button-clear button-assertive" style="line-height: 30px;">
+		 					Decline
+						</button>
+					</div>
+				</div>
+			</li>
+	</ion-content>
 </ion-view>
