--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -31,6 +31,13 @@ ul {
 .task {
 
 }
+
+.email {
+    display: inline;
+}
+.user-email {
+    float: right;
+}
 .task-title {
     font-size:20px;
     display: inline;
